# DeepReSearch

./: .env.example  .gitignore  DATA_CONTRACTS.md  DEVELOPER_DOCUMENTATION.md  Makefile  N8N_ENV_SETUP.md  PerplexityUI(canvascomponent).jsx  README.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  start.sh
apps/: __init__.py
apps/api/: __init__.py  main.py  routes_discover.py
apps/cli/: __init__.py  __main__.py
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
n8n/: config.json
n8n/workflows/: local_perplexity_rag.json
perplexity_core/: __init__.py  config.py  contracts.py  hashing.py  http_client.py
perplexity_core/cache/: redis_cache.py
perplexity_core/extract/: firecrawl.py  readability.py
perplexity_core/llm/: base.py  ollama.py  openrouter.py
perplexity_core/pipeline/: runner.py
perplexity_core/rank/: ranker.py
perplexity_core/safety/: guard.py
perplexity_core/search/: base.py  brave.py  searchapi.py  tavily.py
perplexity_core/store/: embeddings.py  vector_sink.py
perplexity_core/synth/: composer.py  prompts.py  repair.py  structured_prompt.py
perplexity_core/synth/templates/structured/: briefing_doc.py  faq.py  mind_map.py  study_guide.py  timeline.py
perplexity_core/util/: text.py
tests/: check_env.py  check_host_env.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  PerplexityUI.tsx
ui/src/components/discover/: DiscoverPanel.tsx
ui/src/types/: structured.ts
ui/tests/: search.spec.ts
(+6 files in other folders)
